--- a/css/style.css
+++ b/css/style.css
@@ -41,9 +41,9 @@ section {
 }
 
 footer {
-	// position: fixed;
-	padding-top: 30px;
+	position: absolute;
 	bottom: 10px;
-	height: 30px;
-	font-size: 12px;
+	width: 100%;
+	text-align: center;
+	font-size: 10px;
 }
