[#2] Make padding for lists in <section>
- resolve #2 (padding-bottom: 5px;)

--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,10 @@ section {
 	padding-bottom: 10px;
 }
 
+section ul li {
+	padding-bottom: 5px;
+}
+
 footer {
 	position: absolute;
 	bottom: 10px;
