--- a/css/style.css
+++ b/css/style.css
@@ -31,16 +31,16 @@ nav ul li {
 	font-weight: bold;
 }
 
-content {
+section {
 	width: 99%;
 }
 
-section {
+article {
 	padding-left: 10px;
 	padding-bottom: 10px;
 }
 
-section ul li {
+article ul li {
 	padding-bottom: 5px;
 }
 
