--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,13 @@
+@import url('https://fonts.googleapis.com/css?family=Black+Han+Sans&display=swap&subset=korean');
+@import url('https://spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css');
+
 @-ms-viewport { width: device-width; }
 @-o-viewport { width: device-width; }
 @viewport { width: device-width; }
 
 body {
 	padding-left: 100px;
+	font-family: 'Spoqa Han Sans', 'Spoqa Han Sans JP', 'Sans-serif';
 }
 
 header {
@@ -13,11 +17,12 @@ header {
 	height: 100%;
 	width: 100px;
 	background: #b066dd;
+	font-family: 'Black Han Sans';
 }
 
 header h1 {
 	color: #f8ba2b;
-	
+	font-weight: 800;
 }
 
 header a {
@@ -42,8 +47,18 @@ nav ul li {
 	// position: relative;
 	text-align: center;
 	margin-bottom: 10px;
-	font-weight: bold;
+	font-weight: 200;
 }
+
+footer {
+	position: absolute;
+	bottom: 10px;
+	width: 100%;
+	text-align: center;
+	font-size: 10px;
+	color: #fffc8c;
+}
+
 
 section {
 	width: 99%;
@@ -56,13 +71,4 @@ article {
 
 article ul li {
 	padding-bottom: 5px;
-}
-
-footer {
-	position: absolute;
-	bottom: 10px;
-	width: 100%;
-	text-align: center;
-	font-size: 10px;
-	color: #fffc8c;
 }
