--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,6 @@
 @-o-viewport { width: device-width; }
 @viewport { width: device-width; }
 
-body {
-	padding-left: 100px;
-	font-family: 'Spoqa Han Sans', 'Spoqa Han Sans JP', 'Sans-serif';
-}
 
 header {
 	position: fixed;
@@ -16,22 +12,11 @@ header {
 	left: 0px;
 	height: 100%;
 	width: 100px;
-	background: #b066dd;
-	font-family: 'Black Han Sans';
 }
 
 header h1 {
-	color: #f8ba2b;
-	font-weight: 800;
-}
-
-header a {
-	color: #88ee66;
-}
-
-header a:hover {
-	color: #ff1e3c;
-	
+	padding-top: 20px;
+	padding-bottom: 10px;
 }
 
 nav ul {
@@ -41,13 +26,9 @@ nav ul {
 	list-style: none;
 	padding-left: 0px;
 }
-
 nav ul li {
-	// width: 25%;
-	// position: relative;
 	text-align: center;
 	margin-bottom: 10px;
-	font-weight: 200;
 }
 
 footer {
@@ -56,9 +37,12 @@ footer {
 	width: 100%;
 	text-align: center;
 	font-size: 10px;
-	color: #fffc8c;
 }
 
+
+body {
+	padding-left: 100px;
+}
 
 section {
 	width: 99%;
@@ -69,6 +53,38 @@ article {
 	padding-bottom: 10px;
 }
 
-article ul li {
+article li {
 	padding-bottom: 5px;
+}
+
+.header-font {
+	font-family: 'Black Han Sans';
+	font-weight: 100;
+}
+
+.body-font {
+	font-family: 'Spoqa Han Sans', 'Spoqa Han Sans JP', 'Sans-serif';
+}
+
+
+.text-yellow {
+	color: #fffc8c;
+}
+
+.text-orange {
+	color: #f8ba2b;
+}
+
+.text-violet {
+	color: #b066dd;
+}
+.bg-violet {
+	background: #b066dd;
+}
+
+.green-to-red {
+	color: #88ee66;
+}
+.green-to-red:hover {
+	color: #ff1e3c;
 }
