Change violet color
- 조금 더 어두운 보라색으로
- issue #10

--- a/css/style.css
+++ b/css/style.css
@@ -76,10 +76,10 @@ article li {
 }
 
 .text-violet {
-	color: #b066dd;
+	color: #9056c1;
 }
 .bg-violet {
-	background: #b066dd;
+	background: #9056c1;
 }
 
 .green-to-red {
